crates/noxu-persist-derive/tests/ui/fail_secondary_no_fields.stderr
error: `#[derive(SecondaryKey)]` requires at least one field with `#[secondary_key(name = "...", relate = ...)]`
 --> tests/ui/fail_secondary_no_fields.rs:4:1
  |
4 | struct NoSecondary {
  | ^^^^^^
